<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:paddingStart="20dp"
    android:paddingTop="10dp"
    tools:context=".MainActivity"
    tools:ignore="RtlSymmetry,UseCompoundDrawables">

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#A86750A3">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="156dp"
            android:layout_height="wrap_content"
            android:text="@string/quiz_text_start"
            android:textAlignment="center"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_column="0"
            app:layout_row="0" />

        <TextView
            android:id="@+id/tvRespostasCorretas"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:text="@string/tvRespostasCorretas"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_column="1"
            app:layout_row="0"
            tools:ignore="TextSizeCheck" />
    </androidx.gridlayout.widget.GridLayout>

    <TextView
        android:id="@+id/quest2per"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="10dp"
        android:text="@string/quest9_per"
        android:textAlignment="viewStart"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="match_parent"
        android:layout_height="261dp"
        android:importantForAccessibility="no"
        android:paddingBottom="10dp"
        app:srcCompat="@drawable/simgpu" />

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="140dp">

        <Button
            android:id="@+id/button1"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:text="@string/Placamae"
            app:layout_column="0"
            app:layout_row="0" />

        <Button
            android:id="@+id/button2"
            android:layout_width="148dp"
            android:layout_height="61dp"
            android:text="@string/RAM"
            app:layout_column="2"
            app:layout_row="0" />

        <Button
            android:id="@+id/button3"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:text="@string/Placaderede"
            app:layout_column="0"
            app:layout_row="2" />

        <Button
            android:id="@+id/button4"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:text="@string/Placadesom"
            app:layout_column="2"
            app:layout_row="2" />
    </androidx.gridlayout.widget.GridLayout>

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="104dp">

        <Button
            android:id="@+id/backButton"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/quest_geral_back"
            app:layout_column="0"
            app:layout_row="2" />

        <Button
            android:id="@+id/nextButton"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:text="@string/quest_geral_next"
            app:layout_column="2"
            app:layout_row="2" />
    </androidx.gridlayout.widget.GridLayout>

</LinearLayout>