<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="20dp"
    android:paddingStart="20dp"
    android:paddingLeft="20dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:paddingBottom="20dp"
        android:text="@string/quiz_text_start"
        android:textAlignment="center"
        android:textSize="20sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/images" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="147dp"
        tools:ignore="UselessLeaf">

    </FrameLayout>

    <Button
        android:id="@+id/button_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:paddingStart="10dp"
        android:paddingLeft="10dp"
        android:text="@string/button_start"
        android:textSize="20sp"
        tools:ignore="RtlHardcoded,TextSizeCheck,VisualLintButtonSize" />

    <TextView
        android:id="@+id/tvRespostasCorretas"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:text="@string/tvRespostasCorretas"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_column="1"
        app:layout_row="0"
        tools:ignore="TextSizeCheck" />


</LinearLayout>
